[package]
name = "dmx-struct"
version = "0.1.0"
authors = ["michaelhugi <michael.hugi@koenix-band.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A struct that holds a DMX Addresse with parsing capabilities"
homepage = "https://www.koenix-band.ch"
repository = "https://github.com/michaelhugi/dmx-struct"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
